packages/parser/test/parser/E0115-element-access-expression.txt
a := test[1
===== err =====
anonymous:1:12: ParseError: E0115 - Expected closing bracket after element access expression argument
1 | a := test[1
  |            ^
